# phishphage-ai

./: .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md
services/ml/: DATASET_ACQUISITION.md  DATASET_EXPANSION.md  README.md  REGRESSION_REPORT.md  dataset_sources.json  pyproject.toml  requirements.txt
services/ml/config/: dataset_expansion_taxonomy.json  dataset_provenance_schema.json  dataset_source_manifest.example.json  dataset_source_registry.json  source_review_checklist.json
services/ml/data/: README.md
services/ml/models/: registry.json
services/ml/scripts/: analyze_dataset_gaps.py  audit_corpus_inventory.py  audit_languages.py  audit_phishing_pot_batch_002_boundaries.py  audit_source_registry.py  build_english_corpus.py  deduplicate_and_group.py  download_datasets.py  evaluate_model.py  evaluate_safe_fixtures.py  finalize_generalization_report.py  improve_generalization.py  ingest_batch.py  inventory_phishing_pot.py  predict_email.py  prepare_dataset.py  prepare_english_corpus.py  preview_phishing_pot_promotion.py  preview_phishing_pot_weak_labels.py  promote_batch.py  review_batch.py  review_phishing_pot_candidate.py  run_artifact_reduction.py  run_model_development.py  run_phishing_pot_batch_002_dry_run.py  run_phishing_pot_feature_ablations.py  run_phishing_pot_pilot.py  run_phishing_pot_weak_label_experiments.py  scan_phishing_pot_metadata.py  select_phishing_pot_candidates.py  train_model.py  triage_phishing_pot.py  validate_batch_readiness.py  validate_phishing_pot_preflight.py  verify_api_integration.py  verify_downloads.py  (+1 more)
(+209 files in other folders)
