[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishshield-ml"
version = "0.1.0"
description = "ML scaffold for PhishPhage AI"
requires-python = ">=3.11"
dependencies = [
	"joblib>=1.4,<2.0",
	"numpy>=2.0,<3.0",
	"pandas>=2.2,<3.0",
	"scikit-learn>=1.5,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
phishshield-train = "phishshield_ml.scripts.train_model:main"
phishshield-evaluate = "phishshield_ml.scripts.evaluate_model:main"
phishshield-predict = "phishshield_ml.scripts.predict_email:main"

